# register_vm

./: Cargo.toml
src/: cli.rs  main.rs  operations.rs  parser.rs  tests.rs  utils.rs  vm.rs
src/operands/: literals.rs  mod.rs  numbers.rs  register_values.rs
src/operations/: add.rs  cl.rs  dec.rs  div.rs  inc.rs  jl.rs  jle.rs  jlne.rs  jmp.rs  jmpb.rs  jmpe.rs  jmpf.rs  load.rs  mod.rs  mul.rs  print.rs  stop.rs  sub.rs
